--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     {% if session.user_id %}
     <nav class="navbar">
         <div class="container">
-            <div class="nav-brand">
+            <div class="nav-brand"><img src="{{ url_for('static', filename='images/logo.png') }}" alt="BeshGebeya Logo" class="nav-logo">
                 <a href="{{ url_for('dashboard') }}">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="BeshGebeya Logo" class="nav-logo">
                     <div class="nav-brand-text">
